tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_normal_generic_used_when_numeric_expected_in_where_clause_2/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Type provided when a numeric generic was expected
  ┌─ src/main.nr:6:51
  │
6 │     pub fn read<T, N>() -> T where T: Deserialize<N> {
  │                                                   - the numeric generic is not of type `u32`
  │

error: Type provided when a numeric generic was expected
  ┌─ src/main.nr:7:25
  │
7 │         let mut fields: [Field; N] = [0; N];
  │                         ---------- the numeric generic is not of type `u32`
  │

error: Type provided when a numeric generic was expected
  ┌─ src/main.nr:7:42
  │
7 │         let mut fields: [Field; N] = [0; N];
  │                                          - the numeric generic is not of type `u32`
  │

error: cannot find `N` in this scope
  ┌─ src/main.nr:8:21
  │
8 │         for i in 0..N {
  │                     - not found in this scope
  │

Aborting due to 4 previous errors
