tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_normal_generic_used_when_numeric_expected_in_where_clause_2/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Type provided when a numeric generic was expected
  ┌─ src/main.nr:6:51
  │
6 │     pub fn read<T, N>() -> T where T: Deserialize<N> {
  │                                                   - the numeric generic is not of type `u32`
  │

error: Type provided when a numeric generic was expected
  ┌─ src/main.nr:7:25
  │
7 │         let mut fields: [Field; N] = [0; N];
  │                         ---------- the numeric generic is not of type `u32`
  │

error: Type provided when a numeric generic was expected
  ┌─ src/main.nr:7:42
  │
7 │         let mut fields: [Field; N] = [0; N];
  │                                          - the numeric generic is not of type `u32`
  │

error: cannot find `N` in this scope
  ┌─ src/main.nr:8:21
  │
8 │         for i in 0..N {
  │                     - not found in this scope
  │

Aborting due to 4 previous errors
